--- a/index.html
+++ b/index.html
@@ -156,6 +156,71 @@
     </div>
   </div>
 </section>
+<style>
+.project-card {
+  position: relative;
+  width: 300px;
+  padding: 20px;
+  background: #f4f4f4;
+  border-radius: 12px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  cursor: pointer;
+  overflow: hidden;
+  transition: transform 0.3s;
+}
+
+.project-card:hover {
+  transform: scale(1.02);
+}
+
+.project-card img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+  display: none;
+  z-index: 2;
+}
+
+.project-card.show-image img {
+  display: block;
+}
+
+.project-card h3,
+.project-card p,
+.project-card a {
+  position: relative;
+  z-index: 3;
+}
+
+.btn {
+  display: inline-block;
+  padding: 8px 16px;
+  background: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 6px;
+  margin-top: 10px;
+}
+</style>
+
+<div class="project-card" onclick="toggleImage(this)">
+  <h3>AgriAid: Smart Crop & Fertilizer Recommender</h3>
+  <p>A machine learning web app that suggests optimal crops and fertilizers based on real-time soil parameters. Built with Streamlit, integrated with GitHub for version control.</p>
+  <a href="https://agriaid-crop-recommendation.streamlit.app/" target="_blank" class="btn">Live App</a>
+  
+  <!-- Hidden Image to show on touch/click -->
+  <img src="https://via.placeholder.com/300x200.png?text=AgriAid+Preview" alt="Project Preview">
+</div>
+
+<script>
+function toggleImage(card) {
+  card.classList.toggle('show-image');
+}
+</script>
 
 
   
