--- a/index.html
+++ b/index.html
@@ -234,6 +234,30 @@
       </div>
     </div>
   </section>
+<style>
+#contact {
+  padding: 50px 0;
+  text-align: center;
+  background: #f9f9f9;
+}
+
+.contact-info {
+  margin-top: 20px;
+}
+
+.contact-info p,
+.contact-info a {
+  font-size: 18px;
+  color: #333;
+  text-decoration: none;
+  display: block;
+  margin: 5px 0;
+}
+
+.contact-info a:hover {
+  color: #007bff;
+}
+</style>
 
 </body>
 </html>
