--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
         <p>Coursera</p> 
            </div>
             </div>
+ <div class="project-card">
+        <h3>IBM Data Science Professional Certificate</h3>
+        <p>Coursera</p> 
+           </div>
+    
   </div>
 </section>
 
